test/sema/typeck/function/type-params-missing.out
error: cannot infer type arguments: [_].
--> type-params-missing.dora:1:23
 | fn f[T]() {} fn g() { f(); }
                         ~~~
 | 
1 error found.
