test/sema/typeck/function/type-params-missing.dora
fn f[T]() {} fn g() { f(); }
